test/lattests/good/constexprInWhile.lat
int main() {
    while ((40 + 2) <= (10 * 2 * 2 + 3) && (true == !false && (1 == 0 || "abc" < "def"))) {
        return 0;
    }
}