test/lattests/bad/duplicateFunctions.lat
int foo(int x) { return 0; }
int foo(int x) { return 0; }

int main() { return 0; }